Added the need for --enable-native-access in README.md